# haskell-projects

./: .gitignore  README.org
advent-of-code-2018/: README.org  advent-of-code2018.cabal  cabal.sandbox.config
advent-of-code-2018/src/: Day1.hs  Main.hs
beginning-haskell/: ChangeLog.md  beginning-haskell.cabal  cabal.sandbox.config
beginning-haskell/src/Chapter2/: DataTypes.hs  SimpleFunctions.hs
cabal-playground/: README.org  cabal.project
cabal-playground/greeter/: cabal.project  cabal.sandbox.config  greeter.cabal
cabal-playground/greeter-web/: LICENSE  greeter-web.cabal
cabal-playground/greeter/exe/: Main.hs
optics-by-example/: optics-by-example.cabal
optics-by-example/src/: Main.hs
parallel-and-concurrent-programming-book/: README.org
parallel-and-concurrent-programming-book/chapter1/: README.org  cabal.sandbox.config
parallel-and-concurrent-programming-book/chapter2/: ChangeLog.md  README.org  cabal.sandbox.config  parallel-and-concurrent-programming-in-haskell-chapter2.cabal
parallel-and-concurrent-programming-book/chapter3/: CHANGELOG.md  README.org  cabal.sandbox.config  parconc-chapter3.cabal  strat_flymake.hs
pearls-of-functional-algorithm-design/: CHANGELOG.md  cabal.sandbox.config  pearls-of-functional-algorithm-design.cabal
programming-in-haskell/chapter1/: ChangeLog.md  README.org  cabal.project  cabal.sandbox.config  programming-in-haskell-chapter1.cabal
programming-in-haskell/chapter2/: ChangeLog.md  cabal.sandbox.config  programming-in-haskell-chapter3.cabal
programming-in-haskell/chapter4/: cabal.sandbox.config  chapter4.cabal
real-world-haskell/: README.org
real-world-haskell/chapter5/: ChangeLog.md  README.org  cabal.sandbox.config  rwh-chapter5.cabal
recursion-schemes/: README.org
recursion-schemes/practical-introduction-to-recursion-schemes/: ChangeLog.md  README.org  cabal.project.local  cabal.sandbox.config  practical-introduction-to-recursion-schemes.cabal
recursion-schemes/practical-introduction-to-recursion-schemes/src/: Playground.hs  SumTypeOfWay.hs  SumTypeOfWay2.hs
scripts/copier/: .gitignore  README.org  copier.cabal
scripts/ssh-logger/: CHANGELOG.md  config.json  ssh-logger.cabal
servant-playground/: servant-playground.cabal
servant-playground/src/: ApiType.hs
thinking-with-types/: README.org  cabal.sandbox.config  thinking-with-types.cabal
thinking-with-types/lib/Chapter1/: #Ex1_4_i.hs#  Ex1-2-1.hs  Ex1_4_i.hs  Ex1_4_ii.hs  Ex1_4_iii.hs  Playground.hs  README.org  TicTacToe.hs
thinking-with-types/lib/Chapter10/: FCF.hs  Playground.hs  README.org
thinking-with-types/lib/Chapter11/: OpenProduct.hs  Playground.hs  README.org
thinking-with-types/lib/Chapter2/: Ex2_1_3_all.hs  Playground.hs  README.org  TypelevelFamily.hs
thinking-with-types/lib/Chapter3/: Playground.hs  README.org
thinking-with-types/lib/Chapter4/: Playground.hs  README.org
thinking-with-types/lib/Chapter5/: HLists.hs  Playground.hs  README.org
thinking-with-types/lib/Chapter6/: Playground.hs  README.org
thinking-with-types/lib/Chapter7/: Playground.hs  README.org
thinking-with-types/lib/Chapter8/: Playground.hs  README.org
thinking-with-types/lib/Chapter9/: Playground.hs  README.org
(+27 files in other folders)
