cabal-version: >=1.10
name: advent-of-code2018
version: 0.1.0.0
license: GPL-3
license-file: LICENSE
maintainer: arulselvan1234@gmail.com
author: Arulselvan Madhavan
homepage: https://gihub.com/ArulselvanMadhavan
synopsis: Advent of code
category: Language
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.org

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <4.12,
        bytestring -any,
        attoparsec -any

executable advent-of-code2018
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Day1
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <4.12,
        attoparsec >=0.13.2.2,
        bytestring >=0.10.8.2