cabal-version: >=1.10
name: thinking-with-types
version: 0.1.0.0
license: GPL-3
license-file: LICENSE
maintainer: arulselvan1234@gmail.com
author: Arulselvan Madhavan
category: Learning
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.org

library
    hs-source-dirs: lib
    other-modules:
        Chapter1.Playground
        Chapter1.TicTacToe
        Chapter1.Ex1_4_i
    default-language: Haskell2010
    build-depends:
                  base >=4.11 && <4.12,
                  transformers,
                  containers >= 0.6.0.1,
                  first-class-families >= 0.1.0.0

executable thinking-with-types
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
                  base >=4.11 && <4.12